Thori changes / bug fix / update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <nav>
         <ul>
-            <li><a href=""> <h1> Sarhan Ali</h1></a></li>
+            <li><a href=""><h1 id="top-btn1">Sarhan</h1></a></li>
         </ul>
 
         <ul>
@@ -76,6 +76,7 @@
     </main>
 
 
+    <a href="#top-btn1"><button id="top-btn">Top</button></a>
 
 
 </body>
